--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.predictia</groupId>
@@ -13,7 +15,7 @@
 		<name>Predictia</name>
 		<url>http://www.predictia.es</url>
 	</organization>
-		<issueManagement>
+	<issueManagement>
 		<url>https://github.com/Predictia/gfs-reader/issues</url>
 		<system>GitHub Issues</system>
 	</issueManagement>
@@ -36,7 +38,7 @@
 			<id>kktuax</id>
 		</developer>
 	</developers>
-	
+
 	<properties>
 		<netcdf.version>4.4.1</netcdf.version>
 		<github.global.server>github</github.global.server>
@@ -152,6 +154,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>unidata-all</id>
+			<name>Unidata All</name>
+			<url>https://artifacts.unidata.ucar.edu/repository/unidata-all/</url>
+		</repository>
+	</repositories>
 	<reporting>
 		<plugins>
 			<plugin>
